--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>Hello from HTML</h1>
-<h2>Hello from CSS</h2>
+<html>
+<head>
+    <link rel="stylesheet" href="site.css"
+</head>
+<body>
+    <h1>Hello from HTML</h1>
+    <h2>Hello from CSS</h2>
+</body>
+</html>
