--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <td>https://navya53.github.io/</td>
             <td>First Task Done</td>
         </tr>
+        <tr>
+            <td>2</td>
+            <td>30-05-2023</td>
+            <td>Case Insensitive Palindrome,Balancing Parantheses</td>
+            <td>https://www.ideone.com/dr0Gdb,https://www.ideone.com/gnDE6u</td>
+            <td>Second Task Done</td>
+        </tr>
     </table>
     <script src="site.js"></script>
 </body>
