--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
         <tr>
             <td>2</td>
             <td>30-05-2023</td>
-            <td>Case Insensitive Palindrome,Balancing Parantheses</td>
-            <td>https://www.ideone.com/dr0Gdb,https://www.ideone.com/gnDE6u</td>
+            <td>Balancing Parantheses</td>
+            <td>https://www.ideone.com/gnDE6u</td>
             <td>Second Task Done</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>31-05-2023</td>
+            <td>Case Insensitive Palindrome</td>
+            <td>https://www.ideone.com/dr0Gdb</td>
+            <td>Third task</td>
         </tr>
     </table>
     <script src="site.js"></script>
