--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <tr>
             <td>3</td>
             <td>31-05-2023</td>
-            <td>Case Insensitive Palindrome,Check Anagrams</td>
-            <td>https://www.ideone.com/dr0Gdb,https://www.ideone.com/B8CPxP</td>
+            <td>Case Insensitive Palindrome,Check Anagrams,Rotated Sorted Array Search,Merge Two Sorted Lists</td>
+            <td>https://www.ideone.com/dr0Gdb,https://www.ideone.com/B8CPxP,https://www.ideone.com/LZ9g7y,https://www.ideone.com/2dqP0J</td>
             <td>Third task</td>
         </tr>
     </table>
