--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <td>Third task</td>
         </tr>
     </table>
+    <a href="usercard.html">Click here to go to usercard</a>
     <script src="site.js"></script>
 </body>
 </html>
