--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
+    <a href="usercard2.html">Usercard2</a>
     <script src="site.js"></script>
 </body>
 </html>
