--- a/index.html
+++ b/index.html
@@ -32,7 +32,35 @@
             <td>31-05-2023</td>
             <td>Case Insensitive Palindrome,Check Anagrams,Rotated Sorted Array Search,Merge Two Sorted Lists</td>
             <td>https://www.ideone.com/dr0Gdb,https://www.ideone.com/B8CPxP,https://www.ideone.com/LZ9g7y,https://www.ideone.com/2dqP0J</td>
-            <td>Third task</td>
+            <td>solved 4 problems</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>01-06-2023</td>
+            <td>Contains Duplicates,Reverse Linked List</td>
+            <td>https://www.ideone.com/UR97H1,https://www.ideone.com/KcSOiz</td>
+            <td>solved 2 problems</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>03-06-2023</td>
+            <td>Best Time to Buy and Sell Stock</td>
+            <td>https://www.ideone.com/mrznmP</td>
+            <td>solved 1 problem</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>04-06-2023</td>
+            <td>Level Order Traversal,Exclusion Product,Two Sum</td>
+            <td>https://www.ideone.com/80KCt7,https://www.ideone.com/h8AhHr,https://www.ideone.com/kUyz45</td>
+            <td>solved 3 problems</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>06-06-2023</td>
+            <td>Maximum Product Subarray,Sum without using Plus and Minus,Invert Binary Tree</td>
+            <td>https://www.ideone.com/vKGDdm,https://www.ideone.com/dpfLyp,https://www.ideone.com/jjftll</td>
+            <td>Solved 3 problems</td>
         </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
