--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
-    <a href="usercard2.html">Click here to go to Usercard2</a>
+    <a href="usercard2.html">Click</a>
     <script src="site.js"></script>
 </body>
 </html>
