--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             <td>https://www.ideone.com/vKGDdm,https://www.ideone.com/dpfLyp,https://www.ideone.com/jjftll</td>
             <td>Solved 3 problems</td>
         </tr>
+        <tr>
+            <td>8</td>
+            <td>08-06-2023</td>
+            <td>Remove Nth Node from List End,Missing Number,Are Trees Identical,Count Set Bits,        
+                Lowest Common Ancestor,Longest Consecutive Sequence</td>
+            <td>https://www.ideone.com/27qg3a,https://www.ideone.com/U5HLiB,
+                https://www.ideone.com/9VVjFd,https://www.ideone.com/y2Wk5X,
+                https://www.ideone.com/R6UCGI,https://www.ideone.com/C1j29V</td>
+            <td>Solved 6 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
     <a href="usercard2.html">Click</a>
