--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                 https://www.ideone.com/R6UCGI,https://www.ideone.com/C1j29V</td>
             <td>Solved 6 problems</td>
         </tr>
+        <tr>
+            <td>9</td>
+            <td>12-06-2023</td>
+            <td>Reverse bits,counting bits</td>
+            <td>https://www.ideone.com/HlO3vg,https://www.ideone.com/9m76Yu</td>
+            <td>solved 2 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
     <a href="usercard2.html">Click</a>
