--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
     <a href="usercard2.html">Click</a>
+    <a href="usercard3.html">Click here to go to usercard3</a>
     <script src="site.js"></script>
 </body>
 </html>
