changed js file

--- a/usercard3.html
+++ b/usercard3.html
@@ -18,7 +18,7 @@
                 <p class="cardbody-designation" id="Virat-description">Indian Cricketer</p>
             </div>
         </div>
-        <button onclick="flipdata()">Click</button>
+        <button onclick="getRandomUser()">Shuffle</button>
     </div>
     <script src="usercard3.js"></script>
 </body>
