--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
             <td>https://www.ideone.com/HlO3vg,https://www.ideone.com/9m76Yu</td>
             <td>solved 2 problems</td>
         </tr>
+        <tr>
+            <td>10</td>
+            <td>13-06-2023</td>
+            <td>created usercard3</td>
+            <td>https://navya53.github.io/</td>
+            <td>done the task</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>15-06-2023</td>
+            <td>Set Matrix Zeroes,Kth Smallest Element in BST,Number of Islands</td>
+            <td>https://www.ideone.com/FHMQu3,https://www.ideone.com/sRjtvA,https://www.ideone.com/ejAgAW</td>
+            <td>solved 3 problems</td>
+        </tr>
     </table>
     <a href="usercard.html">Click here to go to usercard</a>
     <a href="usercard2.html">Click</a>
